--- a/composer.json
+++ b/composer.json
@@ -1,41 +1,23 @@
 {
-  "name": "PGWireless/php-msf",
-  "description": "PGWireless Micro Service Framework For PHP",
+  "name": "PGWireless/php-context",
+  "description": "PGWireless PHP Context",
   "license": "BSD-3-Clause",
   "type": "library",
-  "homepage": "https://github.com/PGWireless/php-msf",
+  "homepage": "https://github.com/PGWireless/php-context",
   "require": {
     "php": ">=7.0",
-    "PGWireless/php-log": "dev-master",
-    "PGWireless/php-helper": "dev-master",
-    "PGWireless/php-exception": "dev-master",
-    "league/plates": "3.*",
-    "hassankhan/config": "~0.10",
-    "voku/anti-xss": "2.0.1",
-    "alcaeus/mongo-php-adapter": "^1.0",
-    "flexihash/flexihash": "^2.0.0"
+    "PGWireless/php-log": "dev-master"
   },
   "repositories": {
     "php-log": {
       "type": "vcs",
       "url": "http://182.150.28.13:3000/PGWireless/php-log.git"
-    },
-    "php-helper": {
-      "type": "vcs",
-      "url": "http://182.150.28.13:3000/PGWireless/php-helper.git"
-    },
-    "php-exception": {
-      "type": "vcs",
-      "url": "http://182.150.28.13:3000/PGWireless/php-exception.git"
     }
   },
   "autoload": {
     "psr-4": {
-      "PG\\MSF\\": "src/"
-    },
-    "files": [
-      "src/Helpers/Common.php"
-    ]
+      "PG\\Context\\": "src/"
+    }
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
