--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   },
   "require": {
     "php": ">=7.0",
-    "pinguo/php-log": "dev-master"
+    "pinguo/php-log": "1.0.0"
   },
   "repositories": {
     "pinguo/php-log": {
